@@ -1,5 +1,7 @@
 June 2012
  - Updated help file for V5.0
+ - Bug fix: Functions GetLastVisible and GetLastVisibleNoInit return correct results even if some anchestor of the last visible node is not effectively visible
+ - Improvement: Added functions GetNextSiblingnNoInit and GetPreviousSiblingNoInit
 April 2012
  - Added support for theming of hint window (thanks to Arno Garrels and Uwe Schuster)
  - TBaseVirtualTree.CheckParentCheckState: Fixed duplicate recursion to parent nodes
